Use rollup for bundling

--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Blyde Test Page</title>
-	<script src="../src/blyde.js"></script>
+	<script src="../blyde.js"></script>
 </head>
 <body>
 	<h1>Blyde Test Page</h1>
