Event handlers completed

--- a/test/index.html
+++ b/test/index.html
@@ -4,11 +4,24 @@
 	<meta charset="UTF-8">
 	<title>Blyde Test Page</title>
 	<script src="./blyde.dev.js"></script>
+	<style type="text/css" media="screen">
+		.box {
+			border: 1px solid #000;
+			padding: 20px 10px;
+			background-color: #DDD;
+		}
+		.box p {
+			margin: 0;
+			background-color: #FFF;
+		}
+	</style>
 </head>
 <body>
 	<h1>Blyde Test Page</h1>
 	<h2>Just a test</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ullamcorper tortor sagittis faucibus tempor. Nunc viverra, nunc et iaculis varius, mauris metus molestie sem, vel finibus ipsum libero ut tellus. Duis pretium nisl at tincidunt malesuada. Ut a dictum ligula. Quisque tincidunt est eu dolor condimentum, sit amet tempus est blandit. Suspendisse massa felis, pretium at risus vitae, luctus ultrices ipsum. Morbi auctor aliquam nisl non bibendum. Donec laoreet elementum justo et rutrum. Donec imperdiet rhoncus nulla. Ut nibh ex, ullamcorper blandit nisi ac, hendrerit accumsan nunc.</p>
-	<button>ddddd</button>
+	<div class="box">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ullamcorper tortor sagittis faucibus tempor. Nunc viverra, nunc et iaculis varius, mauris metus molestie sem, vel finibus ipsum libero ut tellus. Duis pretium nisl at tincidunt malesuada. Ut a dictum ligula. Quisque tincidunt est eu dolor condimentum, sit amet tempus est blandit. Suspendisse massa felis, pretium at risus vitae, luctus ultrices ipsum. Morbi auctor aliquam nisl non bibendum. Donec laoreet elementum justo et rutrum. Donec imperdiet rhoncus nulla. Ut nibh ex, ullamcorper blandit nisi ac, hendrerit accumsan nunc.</p>
+		<button>ddddd</button>
+	</div>
 </body>
 </html>
